# monoid-sop

./: .gitignore  ChangeLog.md  LICENSE  Readme.md  monoid-sop.cabal
src/Generics/SOP/: Monoid.hs
