name:                monoid-sop
version:             0.1
synopsis:            Semigroup and Monoid instances for product types using generics-sop
description:         The cartesion product of a family of semigroups (resp. monoids) is a
                     semigroup (resp. monoid) under pointwise operations.
                     We use generic programming to provide default methods
                     for product/record types that can be used to implement
                     Semigroup/Monoid instances for such types.
category:            Generics
license:             ISC
license-file:        LICENSE
author:              Johannes Witzig
maintainer:          Johannes_W@quantentunnel.de
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.3

library
  exposed-modules:     Generics.SOP.Monoid
  build-depends:       base          >= 4.11  && < 5,
                       generics-sop  >= 0.3.1 && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  DataKinds
                       FlexibleContexts
                       TypeFamilies
