name:                monoid-sop
version:             0.2
synopsis:            Semigroup and Monoid instances for product types using generics-sop
description:         The cartesion product of a family of semigroups (resp. monoids) is a
                     semigroup (resp. monoid) under pointwise operations.
                     We use generic programming to provide default methods
                     for product/record types that can be used to implement
                     Semigroup/Monoid instances for such types.
category:            Generics

cabal-version:       2.0
license:             ISC
license-file:        LICENSE
author:              Johannes Witzig
maintainer:          Johannes_W@quantentunnel.de
build-type:          Simple
extra-source-files:  ChangeLog.md
tested-with:         GHC == 9.0.2

library
  exposed-modules:     Generics.SOP.Monoid
  build-depends:       base         ^>= 4.15,
                       generics-sop ^>= 0.5.1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  DataKinds
                       FlexibleContexts
                       TypeFamilies
